--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}  
+{% extends "base.html" %}
 
 {% block content %}
 
@@ -6,5 +6,6 @@
         <h2>{{ object.title }}</h2>
         <p>{{ object.body }}</p>
     </div>
-    
+    <p><a href="{% url 'post_edit' post.pk %}">+ Edit Blog Post</a></p>
+    <p><a href="{% url 'post_delete' post.pk %}">+ Delete Blog Post</a></p>
 {% endblock content %}
