--- a/blog/templates/registration/signup.html
+++ b/blog/templates/registration/signup.html
@@ -1,9 +1,12 @@
 <!-- templates/registration/signup.html -->
 {% extends "base.html" %}
 {% block content %}
+
 <h2>Sign Up</h2>
-<form method="post">{% csrf_token %}
-{{ form.as_p }}
-<button type="submit">Sign Up</button>
-</form>
+  <form method="POST">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit">Sign Up</button>
+  </form>
+
 {% endblock content %}
