--- a/news/templates/article_list.html
+++ b/news/templates/article_list.html
@@ -12,13 +12,21 @@
             <span class="text-muted">by {{ article.author }} |
             {{ article.date }}</span>
         </div>
-            <div class="card-body">
-            {{ article.body }}
-        </div>
-        <div class="card-footer text-center text-muted">
+        <div class="card-body">
+            <p>{{ article.body }}</p>
             <a href="{% url 'article_edit' article.pk %}">Edit</a> |
             <a href="{% url 'article_delete' article.pk %}">Delete</a>
-            </div>
+        </div>
+        <div class="card-footer">
+            {% for comment in article.comment_set.all %}
+            <p>
+                <Span class="text-success">
+                    {{ comment.author }} :
+                </span>
+                {{ comment }}
+            </p>
+            {% endfor %}
+        </div>
     </div>
     <br />
 {% endfor %}
