--- a/news/templates/article_detail.html
+++ b/news/templates/article_detail.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
     <div class="article-entry">
         <h2>{{ object.title }}</h2>
@@ -11,6 +13,13 @@
     {% for comment in article.comment_set.all %}
     <p>{{ comment.author }} &middot; {{ comment }}</p>
     {% endfor %}
+    <hr>
+    <h4>Add a comment</h4>
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button class="btn btn-success ml-2">Save</button>
+    </form>
     <p>
         <a href="{% url 'article_edit' article.pk %}">Edit</a> |
         <a href="{% url 'article_delete' article.pk %}">Delete</a>
